syntax = "proto3";
package spn.genesis.v1beta1;

option go_package = "github.com/tendermint/spn/x/genesis/types";

import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";

message Chain {
  string chainID = 1;
  string creator = 2;
  repeated string peers = 3; 
  string sourceURL = 4; 
  string sourceHash  = 5; 
  int64 createdAt = 6;
  bytes initialGenesis = 7;
  bool final = 8;
}

message Proposal {
    ProposalInformation proposalInformation = 1;
    ProposalState proposalState = 2;
    google.protobuf.Any proposalPayload = 3;
}

message ProposalChange {
    ProposalInformation proposalInformation = 1;
    ProposalState proposalState = 2;
    ProposalChangePayload proposalPayload = 3;
}

message ProposalAddAccount {
    ProposalInformation proposalInformation = 1;
    ProposalState proposalState = 2;
    ProposalAddAccountPayload proposalPayload = 3;
}

message ProposalAddValidator {
    ProposalInformation proposalInformation = 1;
    ProposalState proposalState = 2;
    ProposalAddValidatorPayload proposalPayload = 3;
}

message ProposalInformation {
    string chainID = 1;
    int32 proposalID = 2;
    string creator = 3;
    int64 createdAt = 4;
    
}

message ProposalState {
    enum Status {
        APPROVED = 0;
        REJECTED = 1;
        PENDING = 2;
    }
    Status status = 1;
    repeated Vote votes = 2;
}

message Vote {
    int32 voteID = 1;
    string creator = 2;
    int64 createdAt = 3;
    enum Value {
        APPROVE = 0;
        REJECT = 1;
    }
    Value value = 4;
}

message ProposalChangePayload {
    string changePath = 2;
    string newValue = 3;
}

message ProposalAddAccountPayload {
    bytes address = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    repeated Coin coins = 3;
}

message ProposalAddValidatorPayload {
    bytes operatorAddress = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.ValAddress"];
    bytes consensusPubKey = 3 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.ConsAddress"];
    message Description {
        string moniker          = 1;
        string identity         = 2;
        string website          = 3;
        string security_contact = 4;
        string details          = 5;
    }
    Description description = 4;
    message Comission {
        string commissionMaxChangeRate = 1;
        string commissionMaxRate = 2;
        string commissionRate = 3;
    }
    Comission commission = 5;
    Coin selfDelegation = 6;
    bytes genTx = 7;
    string peer = 8;
}

message Coin {
    string denom = 1;
    string amount = 2;
}